changed to and from to start_at and end_at

--- a/config/locales/nb.yml
+++ b/config/locales/nb.yml
@@ -52,8 +52,8 @@ nb:
         phone: Phone
       refinery/calendar/event:
         title: Title
-        from: From
-        to: To
+        start_at: From
+        end_at: To
         registration_link: Registration Link
         excerpt: Excerpt
         description: Description
