--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -54,8 +54,8 @@ en:
         phone: Phone
       refinery/calendar/event:
         title: Title
-        from: From
-        to: To
+        start_at: From
+        end_at: To
         registration_link: Registration Link
         excerpt: Excerpt
         description: Description
