--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -50,8 +50,8 @@ fr:
         phone: Phone
       refinery/calendar/event:
         title: Title
-        from: From
-        to: To
+        start_at: From
+        end_at: To
         registration_link: Registration Link
         excerpt: Excerpt
         description: Description
