--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -52,8 +52,8 @@ nl:
         phone: Phone
       refinery/calendar/event:
         title: Title
-        from: From
-        to: To
+        start_at: From
+        end_at: To
         registration_link: Registration Link
         excerpt: Excerpt
         description: Description
